--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@reduxjs/toolkit": "^2.2.3",
+    "apexcharts": "^3.49.1",
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
